# amc-web

./: .env.example  .gitattributes  .gitignore  .prettierignore  AGENTS.md  Cargo.toml  README.md  buf.gen.yaml  eslint.config.js  lefthook.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  tsconfig.json  unocss.config.ts  vite-plugin-remove-unused-css-vars.ts  vite.config.ts  vitest.config.ts
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: cd.yml  check.yml  ci.yml  discord-notify.yml  wasm.yml
.storybook/: main.ts  preview.ts  unocss-svelte-scoped-global.css  unocss-svelte-scoped-global.css.ts
messages/: en.json  id.json  ms.json  th.json  tl.json
pakop/: Cargo.toml
pakop/src/: lib.rs
project.inlang/: project_id  settings.json
scripts/: discord_notify.py  find-non-uno-classes.js  remove-unused-css-vars.js
src/: app.css  app.d.ts  app.html  globals.d.ts  hooks.server.ts  hooks.ts
src/lib/: censored.svelte.ts  constants.ts  date.ts  font-sans-em.ts  realtimeDate.svelte.ts  svelteDate.svelte.ts  tw-var.ts
src/lib/api/: _api.test.ts  _api.ts  championship.ts  delivery.ts  event.ts  housing.ts  player.ts  radio.ts  shortcutZone.ts  teams.ts  teleport.ts  types.ts
src/lib/data/: area.ts  cargo.ts  deliveryPoint.ts  event.ts  house.ts  teams.ts  types.ts
src/lib/localeFormat/: date.ts
src/lib/schema/: pin.ts  track.test.ts  track.ts
src/lib/types/: index.ts
src/lib/ui/: shared.ts
src/lib/utils/: clientSearchParamsGet.ts  colorContrast.ts  cssTranstionToMs.test.ts  delivery.test.ts  delivery.ts  filterSubsets.test.ts  filterSubsets.ts  formatTime.test.ts  formatTime.ts  getInventoryAmount.ts  getMtLocale.ts  matchJob.ts  media.svelte.ts  media.ts  parsePlayerRole.test.ts  parsePlayerRole.ts  status.ts  validateTrack.test.ts  validateTrack.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/(map)/: +layout.svelte
src/routes/ankhr/: +page.svelte
src/routes/championship/: +layout.svelte  +page.svelte
src/routes/housing/: +page.svelte
src/routes/industries/: +page.svelte
src/routes/map/: +page.svelte
src/routes/radio/: +page.svelte
src/routes/track/: +layout.svelte  +page.svelte
src/routes/wasm-map/: +page.svelte
src/stories/Reference/: Color.stories.svelte
static/: _headers  manifest.json
static/downloads/: RadioMod_P.pak
static/map_tiles/: 0_0_0.avif  1_0_0.avif  1_0_1.avif  1_1_0.avif  1_1_1.avif  2_0_2.avif  2_0_3.avif  2_1_0.avif  2_1_1.avif  2_1_2.avif  2_1_3.avif  2_2_0.avif  2_2_1.avif  2_2_2.avif  2_2_3.avif  2_3_2.avif  2_3_3.avif  3_1_4.avif  3_1_5.avif  3_1_6.avif  3_2_3.avif  3_2_4.avif  3_2_5.avif  3_2_6.avif  3_2_7.avif  3_3_0.avif  3_3_1.avif  3_3_2.avif  3_3_3.avif  3_3_4.avif  3_3_5.avif  3_3_7.avif  3_4_0.avif  3_4_1.avif  3_4_2.avif  3_4_3.avif  3_4_4.avif  3_5_0.avif  3_5_1.avif  3_5_2.avif  (+1300 more)
static/map_tiles/715p1/: 0_0_0.avif  1_0_0.avif  1_0_1.avif  1_1_0.avif  1_1_1.avif  2_0_1.avif  2_0_2.avif  2_0_3.avif  2_1_0.avif  2_1_1.avif  2_1_2.avif  2_1_3.avif  2_2_0.avif  2_2_1.avif  2_2_2.avif  2_2_3.avif  2_3_0.avif  2_3_1.avif  2_3_2.avif  2_3_3.avif  3_1_5.avif  3_1_6.avif  3_2_3.avif  3_2_5.avif  3_2_6.avif  3_3_0.avif  3_3_1.avif  3_3_2.avif  3_3_3.avif  3_3_4.avif  3_3_5.avif  3_3_6.avif  3_4_0.avif  3_4_1.avif  3_4_2.avif  3_4_3.avif  3_4_4.avif  3_4_5.avif  3_4_6.avif  (+814 more)
static_dev/animation/: spark.lottie
vite-plugins/: usmap-compress.ts  wasm-bindgen.ts  webmanifest.ts
wasm/pakop/: Cargo.toml
wasm/pakop/src/: lib.rs
wasm/wasm-map/: Cargo.toml
wasm/wasm-map/src/: camera.rs  components.rs  constants.rs  debug_ui.rs  features.rs  font.rs  lib.rs  tiles.rs  ui.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+1915 files in other folders)
