[workspace]
members = ["wasm/pakop", "wasm/wasm-map", "xtask"]
resolver = "3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = "warn"
todo = "warn"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
panic = 'abort'

[profile.release.package.wasm-map]
opt-level = 's'
