[package]
name = "pakop"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = { version = "0.1", optional = true }
repak = { git = "https://github.com/trumank/repak.git", package = "repak" }
path-slash = "0.2"
sha2 = "0.11"
digest-io = "0.1"
hex = "0.4.3"
unreal_asset = { git = "https://github.com/ASEAN-Motor-Club/unrealmodding", rev = "a4cabe4" }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
