[package]
name = "wasm-map"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }
bevy_woff = "0.1"
bevy = { version = "0.18.1", default-features = false, features = [
    "2d_bevy_render",
    "bevy_anti_alias",
    "default_app",
    "default_platform",
    "ui",
    "webgl2",
    "png",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
